# kinder-denkspiele

./: .env.example  .gitignore  .vercelignore  AI-GUIDE.md  API-REFERENCE.md  ARCHITECTURE.md  AUTH.md  CLAUDE.md  DATABASE-STRUCTURE.md  DECISIONS.md  DOCS-INDEX.md  FRONTEND_INTEGRATION_COMPLETE.md  MIGRATION_NOTES.md  QUICKSTART.md  README.md  TECH-STACK.md  THEMING.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  package.json  test-backend-connection.js  vitest.config.ts
backend/: CLAUDE.md  DEPLOYMENT.md  ERROR_HANDLING.md  IMAGE_GENERATION_SPEC.md  IMPLEMENTATION_SUMMARY.md  config.yaml  fly.toml  migrate_story_tool.py  pyproject.toml
backend/app/: config.py  database.py  error_handlers.py  exceptions.py  logger.py  main.py  models.py  utils.py
backend/app/routers/: adventure.py
backend/app/services/: character_manager.py  config_loader.py  game_engine.py  history_builder.py  image_generator.py  llm_service.py  session_manager.py  story_generator.py
docs/: AUTH.md  LOGIC-LAB-SPEC.md  LOGIC-LAB.md  QUICKSTART.md  THEMING.md  TROUBLESHOOTING.md
src/: app.css  env.d.ts  hooks.server.ts
src/lib/: CLAUDE.md  design-tokens.ts  theme.ts
src/lib/components/: Button.svelte  CLAUDE.md  Card.svelte  FunNuggetCard.svelte  GameStats.svelte  JourneyRecap.svelte  ProgressSteps.svelte  SpeakerButton.svelte  VisualMemoryGrid.svelte
src/lib/data/: word-pools.ts
src/lib/db/: client.ts
src/lib/prompts/: CLAUDE.md  generate-problem.yaml  validate-problem.yaml
src/lib/services/: CLAUDE.md  (+11 more)
src/routes/: +layout.svelte  +page.svelte  CLAUDE.md
(+44 files in other folders)
